Add edit customer dialog
