# src/openapi/models/CustomersGet200Response.ts
@@ -1,89 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Simple API overview
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 2.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface CustomersGet200Response
- */
-export interface CustomersGet200Response {
-    /**
-     * 
-     * @type {number}
-     * @memberof CustomersGet200Response
-     */
-    iD?: number;
-    /**
-     * 
-     * @type {string}
-     * @memberof CustomersGet200Response
-     */
-    name?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CustomersGet200Response
-     */
-    licensePlate?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CustomersGet200Response
-     */
-    carColor?: string;
-}
-
-/**
- * Check if a given object implements the CustomersGet200Response interface.
- */
-export function instanceOfCustomersGet200Response(value: object): boolean {
-    let isInstance = true;
-
-    return isInstance;
-}
-
-export function CustomersGet200ResponseFromJSON(json: any): CustomersGet200Response {
-    return CustomersGet200ResponseFromJSONTyped(json, false);
-}
-
-export function CustomersGet200ResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): CustomersGet200Response {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'iD': !exists(json, 'ID') ? undefined : json['ID'],
-        'name': !exists(json, 'name') ? undefined : json['name'],
-        'licensePlate': !exists(json, 'license_plate') ? undefined : json['license_plate'],
-        'carColor': !exists(json, 'car_color') ? undefined : json['car_color'],
-    };
-}
-
-export function CustomersGet200ResponseToJSON(value?: CustomersGet200Response | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'ID': value.iD,
-        'name': value.name,
-        'license_plate': value.licensePlate,
-        'car_color': value.carColor,
-    };
-}
-
