# src/openapi/models/CustomersPostRequest.ts
@@ -1,89 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Simple API overview
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 2.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface CustomersPostRequest
- */
-export interface CustomersPostRequest {
-    /**
-     * 
-     * @type {any}
-     * @memberof CustomersPostRequest
-     */
-    name?: any | null;
-    /**
-     * 
-     * @type {any}
-     * @memberof CustomersPostRequest
-     */
-    licensePlate?: any | null;
-    /**
-     * 
-     * @type {any}
-     * @memberof CustomersPostRequest
-     */
-    carColor?: any | null;
-    /**
-     * 
-     * @type {any}
-     * @memberof CustomersPostRequest
-     */
-    carYear?: any | null;
-}
-
-/**
- * Check if a given object implements the CustomersPostRequest interface.
- */
-export function instanceOfCustomersPostRequest(value: object): boolean {
-    let isInstance = true;
-
-    return isInstance;
-}
-
-export function CustomersPostRequestFromJSON(json: any): CustomersPostRequest {
-    return CustomersPostRequestFromJSONTyped(json, false);
-}
-
-export function CustomersPostRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): CustomersPostRequest {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'name': !exists(json, 'name') ? undefined : json['name'],
-        'licensePlate': !exists(json, 'license_plate') ? undefined : json['license_plate'],
-        'carColor': !exists(json, 'car_color') ? undefined : json['car_color'],
-        'carYear': !exists(json, 'car_year') ? undefined : json['car_year'],
-    };
-}
-
-export function CustomersPostRequestToJSON(value?: CustomersPostRequest | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'name': value.name,
-        'license_plate': value.licensePlate,
-        'car_color': value.carColor,
-        'car_year': value.carYear,
-    };
-}
-
